--- a/style.css
+++ b/style.css
@@ -39,24 +39,6 @@ html, body {
   }
   
   /* second example */
-  .call-outs-container {
-    max-width: 1400px;
-    margin: 40px auto 0 auto;
-    
-  }
-  
-  .call-out {
-    padding: 20px;
-    box-sizing: border-box;
-    margin-bottom: 20px;
-    
-  } 
-  
-  .call-out:nth-child(1) {background-color: #c0dbe2;}
-  .call-out:nth-child(2) {background-color: #cdf1c3;}
-  .call-out:nth-child(3) {background-color: #ccb9da;}
-  
-  /* third example */
   .fixed-size-container {
     max-width: 1400px;
     margin: 40px auto 0 auto;
@@ -75,4 +57,23 @@ html, body {
     font-size: 60px;
     margin-bottom: 20px;
   }
+
+  /* Extension */
+  .call-outs-container {
+    max-width: 1400px;
+    margin: 40px auto 0 auto;
+    
+  }
+  
+  .call-out {
+    padding: 20px;
+    box-sizing: border-box;
+    margin-bottom: 20px;
+    
+  } 
+  
+  .call-out:nth-child(1) {background-color: #c0dbe2;}
+  .call-out:nth-child(2) {background-color: #cdf1c3;}
+  .call-out:nth-child(3) {background-color: #ccb9da;}
+  
   
